@@ -40,6 +40,9 @@
     <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
     <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
+
+    <!-- test infra -->
+    <testcontainers.version>1.20.4</testcontainers.version>
   </properties>
 
   <dependencyManagement>
@@ -110,6 +113,15 @@
         <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
+
+      <!-- Testcontainers BOM -->
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -124,10 +136,6 @@
           <configuration>
             <release>${java.version}</release>
             <enablePreview>true</enablePreview>
-            <compilerArgs>
-              <!-- Panama FFI requires native access -->
-              <arg>--enable-native-access=ALL-UNNAMED</arg>
-            </compilerArgs>
           </configuration>
         </plugin>
 
